methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:9: error: type mismatch;
 found   : Unit
 required: Boolean
   recule(6)
         ^